--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,11 @@ description = "Fast distributed highly available in-memory key/value database wi
 
 [[bin]]
 name = "server"
-path = "src/server/main.rs"
+path = "src/bin/octopusmqd/main.rs"
 
 [[bin]]
 name = "client"
-path = "src/client/main.rs"
+path = "src/bin/octopus-cli/main.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
