--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,27 @@
 [package]
-name = "octopusmq"
+name = "octomq"
 version = "0.1.0"
 edition = "2021"
 description = "Fast distributed highly available in-memory key/value database with publish-subscribe interface"
+license = "Apache-2.0"
 
-[[bin]]
-name = "server"
-path = "src/bin/octopusmqd/main.rs"
-
-[[bin]]
-name = "client"
-path = "src/bin/octopus-cli/main.rs"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "octomq"
 
 [dependencies]
+serde = { version = "1.0", features = ["derive"] }
+clap = { version = "4.1.4", features = ["derive"] }
+
+[workspace]
+# See https://github.com/rust-lang/rfcs/blob/master/text/2957-cargo-features2.md
+# Without resolver = 2, using `cargo build --features x` to build `cmd`
+# will _not_ propagate the feature `x` into `cmd`'s direct dependencies.
+resolver = "2"
+members = [
+  "cmd/octomq-cli",
+  "cmd/octomq-server",
+]
+default-members = ["cmd/octomq-server", "cmd/octomq-cli"]
+
+[workspace.dependencies]
+octomq = { path = ".", default-features = false }
