--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ name = "octomq"
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
+serde_yaml = "0.8"
 clap = { version = "4.1.4", features = ["derive"] }
 
 [workspace]
