--- a/cmd/cactusdb-server/Cargo.toml
+++ b/cmd/cactusdb-server/Cargo.toml
@@ -1,13 +1,15 @@
 [package]
-name = "octomq-server"
+name = "cactusdb-server"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+cactusdb = { workspace = true }
 clap = { version = "4.1.4", features = ["derive"] }
 serde = "1.0"
 serde_yaml = "0.8"
-octomq = { workspace = true }
+serde_json = "1.0"
+toml = "0.7"
 
